# vrp-model

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: Bug_report.md  Question.md
.github/workflows/: ci.yml  publish.yml
rules/: no-backwards-compatibility.mdc  project-conventions.mdc  verify-after-changes.mdc
tests/: __init__.py  _vroom_probe.py  test_features.py  test_job_groups.py  test_map_status.py  test_model_solution.py  test_model_views.py  test_nextroute_solver.py  test_ortools_solver.py  test_pyvrp_solver.py  test_registry.py  test_solution_status.py  test_solver_base.py  test_solver_capability.py  test_solver_options.py  test_storage.py  test_toy_instances_solvers.py  test_toy_instances_verify.py  test_travel_edges.py  test_utils_distance.py  test_utils_time.py  test_validation.py  test_vroom_solver.py  test_vrplib_io.py  test_vrplib_keys.py  tiny_line_solver.py  toy_instances.py
vrp_model/: __init__.py
vrp_model/core/: __init__.py  errors.py  kinds.py  model.py  records.py  solution.py  storage.py  time_window_flex.py  travel_edges.py  views.py
vrp_model/io/: __init__.py  vrplib_io.py  vrplib_keys.py  vrplib_normalize.py  vrplib_read.py  vrplib_types.py  vrplib_write.py
vrp_model/solvers/: __init__.py  _helpers.py  base.py  options.py  registry.py  status.py
vrp_model/solvers/hgs_cvrp/: __init__.py
vrp_model/solvers/jsprit/: __init__.py
vrp_model/solvers/nextroute/: __init__.py  (+3 more)
vrp_model/utils/: __init__.py  distance.py  time.py
vrp_model/validation/: __init__.py  consistency.py  feasibility.py  job_groups.py  structure.py  tags.py
(+14 files in other folders)
