[project]
name = "vrp-model"
version = "0.1.0"
description = "Solver-agnostic VRP modeling library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["vrplib>=2.0.2"]

[project.optional-dependencies]
pyvrp = ["pyvrp>=0.9.0"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vrp_model"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
